Regression: Photo "blowout" when rendering and denoising in 3.1.0 #96718

Closed
opened 2022-03-22 20:45:31 +01:00 by Fara Shimbo · 22 comments

System Information
Operating system: Linux Mint 20.2
Graphics card: Nvidia 3070ti

Blender Version
Broken: 3.1.0 2022-03-08 18:16 c77597cd0e master
Worked: 3.0.0 2021-12-02 18:35 f1cca30557 master

Caused by 0781c22cee

When rendering the attached file in CPU compute, a number of fireflies appear, and upon denoising, these "blow out." I am using CPU compute because this file runs my graphics card out of memory. This file is rendered in Cycles.DiscussingWithRuba.blend.tar.gz

Exact steps for others to reproduce the error
Render the image in the attached file. It blows out reliably every time. Neither the fireflies nor the blowouts appear in 3.0.RubaTrilobitesTexty.jpg

WhyTurnedTheLightsOnTexty.jpg

I am including an image rendered in 3.0 (still runs the GPU out of memory), one "blow out" rendered in 3.1, and a tar.gz of the file.

Thanks!

**System Information** Operating system: Linux Mint 20.2 Graphics card: Nvidia 3070ti **Blender Version** Broken: 3.1.0 2022-03-08 18:16 c77597cd0e15 master Worked: 3.0.0 2021-12-02 18:35 f1cca3055776 master Caused by 0781c22cee When rendering the attached file in CPU compute, a number of fireflies appear, and upon denoising, these "blow out." I am using CPU compute because this file runs my graphics card out of memory. This file is rendered in Cycles.[DiscussingWithRuba.blend.tar.gz](https://archive.blender.org/developer/F12940398/DiscussingWithRuba.blend.tar.gz) **Exact steps for others to reproduce the error** Render the image in the attached file. It blows out reliably every time. Neither the fireflies nor the blowouts appear in 3.0.![RubaTrilobitesTexty.jpg](https://archive.blender.org/developer/F12940390/RubaTrilobitesTexty.jpg) ![WhyTurnedTheLightsOnTexty.jpg](https://archive.blender.org/developer/F12940394/WhyTurnedTheLightsOnTexty.jpg) I am including an image rendered in 3.0 (still runs the GPU out of memory), one "blow out" rendered in 3.1, and a tar.gz of the file. Thanks!
Author

Added subscriber: @FaraS

Added subscriber: @FaraS
Member

Added subscribers: @brecht, @Alaska

Added subscribers: @brecht, @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this issue with the setup listed below.

The issue isn't "fireflies" in the typical sense. It is some rendering error which is resulting in extreme values. This is definitely an error.
Is there a specific object or something in the scene that's causing this? Maybe, but I haven't identified it yet.

Bisecting points to 0781c22cee as the issue. CC @brecht can you take a look at it?

System Information
Operating system: Linux-5.16.0-4-amd64-x86_64-with-glibc2.33 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.54
Blender version: 3.2.0 Alpha, branch: master, commit date: 2022-03-22 07:07, hash: 47451af027

I can confirm this issue with the setup listed below. The issue isn't "fireflies" in the typical sense. It is some rendering error which is resulting in extreme values. This is definitely an error. Is there a specific object or something in the scene that's causing this? Maybe, but I haven't identified it yet. Bisecting points to 0781c22cee as the issue. CC @brecht can you take a look at it? **System Information** Operating system: Linux-5.16.0-4-amd64-x86_64-with-glibc2.33 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.54 Blender version: 3.2.0 Alpha, branch: master, commit date: 2022-03-22 07:07, hash: `47451af027`
Author

I should add that the more light in the scene, the worse the problem (this render was done with the lights at about twice the power they were at in the file. Don't know if this will help track the bug, but here it is for what it's worth.WhoTurnedTheLightsOn.png

I should add that the more light in the scene, the worse the problem (this render was done with the lights at about twice the power they were at in the file. Don't know if this will help track the bug, but here it is for what it's worth.![WhoTurnedTheLightsOn.png](https://archive.blender.org/developer/F12940701/WhoTurnedTheLightsOn.png)

Added subscriber: @Connor-Denning

Added subscriber: @Connor-Denning

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-03-23 14:16:21 +01:00

I can reproduce this in 3.1.0 but not 3.2.0 alpha, it appears to be solved there.
https://builder.blender.org/download/daily/

I'm also not sure 0781c22cee is related to this, I see no ambient occlusion in this file, but doesn't really matter either way.

I can reproduce this in 3.1.0 but not 3.2.0 alpha, it appears to be solved there. https://builder.blender.org/download/daily/ I'm also not sure 0781c22cee is related to this, I see no ambient occlusion in this file, but doesn't really matter either way.
Author

I just downloaded 3.2 alpha, and while the resulting problem is slightly different, it's still there.
scenein3.2Alpha.jpg

I just downloaded 3.2 alpha, and while the resulting problem is slightly different, it's still there. ![scenein3.2Alpha.jpg](https://archive.blender.org/developer/F12941871/scenein3.2Alpha.jpg)
Member

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'
Alaska reopened this issue 2022-03-24 01:07:56 +01:00
Member

I can continue to reproduce the issue in builds from the build bot and my own build of latest master. I will re-open the report in the mean time.

If knowing what CPU is used during rendering helps in some way, I am using the Ryzen 9 5950X.

My own build of master: 3.2.0 Alpha, branch: master, commit date: 2022-03-23 22:25, hash: 51380b9346
Build bot: 3.2.0 Alpha, branch: master, commit date: 2022-03-22 22:06, hash: 5c27391b0f

I can continue to reproduce the issue in builds from the build bot and my own build of latest master. I will re-open the report in the mean time. If knowing what CPU is used during rendering helps in some way, I am using the Ryzen 9 5950X. My own build of master: 3.2.0 Alpha, branch: master, commit date: 2022-03-23 22:25, hash: `51380b9346` Build bot: 3.2.0 Alpha, branch: master, commit date: 2022-03-22 22:06, hash: `5c27391b0f`
Brecht Van Lommel was unassigned by Alaska 2022-03-24 01:08:13 +01:00

Added subscriber: @Fernando-Alcala

Added subscriber: @Fernando-Alcala

I can reproduce on Ubuntu 21.10 with a Threadripper 3000.
Cannot reproduce on Windows 10 with an i7 4790k or Threadripper.

On Ubuntu, it isn't just the denoise that breaks, there are a bunch of additional fireflies that aren't on the Windows version. The fireflies are different every time too.
Windows i7/TR noisy
winows i7 noisy 32 sample.png
Windows i7/TR denoise
winows i7 denoised 32 sample.png
Ubuntu TR noisy render 1
ubuntu threadripper noisy 32 samples.png
Ubuntu TR noisy render 2
ubuntu threadripper noisy 32 samples render 2.png
Ubuntu TR denoised render 1
ubuntu threadripper denoised 32 samples render 1.png
Ubuntu TR denoised render 2
ubuntu threadripper denoised 32 samples render 2.png

I can reproduce on Ubuntu 21.10 with a Threadripper 3000. Cannot reproduce on Windows 10 with an i7 4790k or Threadripper. On Ubuntu, it isn't just the denoise that breaks, there are a bunch of additional fireflies that aren't on the Windows version. The fireflies are different every time too. Windows i7/TR noisy ![winows i7 noisy 32 sample.png](https://archive.blender.org/developer/F12942193/winows_i7_noisy_32_sample.png) Windows i7/TR denoise ![winows i7 denoised 32 sample.png](https://archive.blender.org/developer/F12942192/winows_i7_denoised_32_sample.png) Ubuntu TR noisy render 1 ![ubuntu threadripper noisy 32 samples.png](https://archive.blender.org/developer/F12942191/ubuntu_threadripper_noisy_32_samples.png) Ubuntu TR noisy render 2 ![ubuntu threadripper noisy 32 samples render 2.png](https://archive.blender.org/developer/F12942190/ubuntu_threadripper_noisy_32_samples_render_2.png) Ubuntu TR denoised render 1 ![ubuntu threadripper denoised 32 samples render 1.png](https://archive.blender.org/developer/F12942188/ubuntu_threadripper_denoised_32_samples_render_1.png) Ubuntu TR denoised render 2 ![ubuntu threadripper denoised 32 samples render 2.png](https://archive.blender.org/developer/F12942189/ubuntu_threadripper_denoised_32_samples_render_2.png)
Author

I am using an AMD Ryzen 5 3600X 6-Core Processor

I am using an AMD Ryzen 5 3600X 6-Core Processor
Philipp Oeser changed title from Photo "blowout" when rendering and denoising in 3.1.0 to Regression: Photo "blowout" when rendering and denoising in 3.1.0 2022-03-25 11:13:44 +01:00
Member

Added subscriber: @LukasStockner

Added subscriber: @LukasStockner
Lukas Stockner self-assigned this 2022-05-01 01:23:23 +02:00
Member

Can reproduce, the problem appears to be caused by the shader on rock.005.

Something is going wrong with SVM there, it's reading an uninitialized location from the stack, which returns garbage, which in turn gets used as an emission value, resulting in the bright pixels. That also explains the differences between compilers/platforms.

Can reproduce, the problem appears to be caused by the shader on `rock.005`. Something is going wrong with SVM there, it's reading an uninitialized location from the stack, which returns garbage, which in turn gets used as an emission value, resulting in the bright pixels. That also explains the differences between compilers/platforms.

In #96718#1349609, @LukasStockner wrote:
Can reproduce, the problem appears to be caused by the shader on rock.005.

Something is going wrong with SVM there, it's reading an uninitialized location from the stack, which returns garbage, which in turn gets used as an emission value, resulting in the bright pixels. That also explains the differences between compilers/platforms.

Hello I'm having similar issue with GPU and CPU rendering outputting very different results on there tiles in hybrid rendering cuda and opencl. the density seems to be off between them.
this file should show it. Broken volumes.blend

> In #96718#1349609, @LukasStockner wrote: > Can reproduce, the problem appears to be caused by the shader on `rock.005`. > > Something is going wrong with SVM there, it's reading an uninitialized location from the stack, which returns garbage, which in turn gets used as an emission value, resulting in the bright pixels. That also explains the differences between compilers/platforms. Hello I'm having similar issue with GPU and CPU rendering outputting very different results on there tiles in hybrid rendering cuda and opencl. the density seems to be off between them. this file should show it. [Broken volumes.blend](https://archive.blender.org/developer/F13044084/Broken_volumes.blend)
Member

@Connor-Denning , reports about different bugs should be made in different bug reports. Please report your issue elsewhere by selecting from the top of Blender {nav Help > Report a bug} and filling out all the relevant information.

@Connor-Denning , reports about different bugs should be made in different bug reports. Please report your issue elsewhere by selecting from the top of Blender {nav Help > Report a bug} and filling out all the relevant information.

In #96718#1349867, @Alaska wrote:
@Connor-Denning , reports about different bugs should be made in different bug reports. Please report your issue elsewhere by selecting from the top of Blender {nav Help > Report a bug} and filling out all the relevant information.

Are you sure my issue isn't the same issue cause I'm thinking the issue I'm having might be this issue. I'm happy to make a bug report if it's not.

> In #96718#1349867, @Alaska wrote: > @Connor-Denning , reports about different bugs should be made in different bug reports. Please report your issue elsewhere by selecting from the top of Blender {nav Help > Report a bug} and filling out all the relevant information. Are you sure my issue isn't the same issue cause I'm thinking the issue I'm having might be this issue. I'm happy to make a bug report if it's not.

It's not the same issue, please make a separate bug report.

It's not the same issue, please make a separate bug report.

This issue was referenced by 54f447ecde

This issue was referenced by 54f447ecde72ab97c058d3b81f616751ef1677e1

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96718
No description provided.